# test_poetry_private_deps

./: README.md  pyproject.toml
