[tool.poetry]
name = "test_poetry_private_deps"
version = "0.1.0"
description = ""
authors = ["matemax <matemaks@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
private-module = {git = "git@github.com:matemax/poetry_private_module.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
